# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
brain_games/: cli.py  engine.py  import_.py
brain_games/games/: brain_calc.py  brain_calc_init.py  brain_even.py  brain_even_init.py  brain_gcd.py  brain_gcd_init.py  brain_prime.py  brain_prime_init.py  brain_prog.py  brain_prog_init.py  brain_progression_init.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_interface.py  brain_prime.py  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  demo.cast
