[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vitaly volk"]
readme = "README.md"
packages = [
 {include = "brain_games"}
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
asciinema = "^2.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
