[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Module with some CLI math games"
authors = ["vitaly volk"]
readme = "README.md"
repository = "https://github.com/vitaly-volk/python-project-49/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
 {include = "brain_games"}
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
asciinema = "^2.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
